tests/machine/x/go/outer_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/outer_join.go:89:6: non-boolean condition in if statement
../../../tests/machine/x/go/outer_join.go:90:7: non-boolean condition in if statement

1: //go:build ignore
